[package]
name = "tee_authority"
version = "0.1.0"
edition = "2024"

[features]
default = []
external-services-tests = []

[dependencies]
anyhow = { workspace = true }
attestation = { workspace = true }
backon = { workspace = true }
derive_more = { workspace = true }
dstack-sdk = { workspace = true }
dstack-sdk-types = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rstest = { workspace = true }
