[package]
name = "mpc-node"
version = "1.0.0-rc.3"
edition = "2021"

[[bin]]
name = "mpc-node"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
aws-config = "1.4"
aws-sdk-s3 = "1.29"
aws-types = "1.2"
axum = { version = "0.6.19" }
axum-extra = "0.7"
cait-sith = { git = "https://github.com/LIT-Protocol/cait-sith.git", features = [
    "k256",
], rev = "8ad2316" }
clap = { version = "4.2", features = ["derive", "env"] }
chrono = "0.4.24"
google-datastore1 = "=5.0.4"
google-secretmanager1 = "5"
hex = "0.4.3"
hkdf = "0.12.4"
highway = "1.1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "=0.24", features = ["http2"] }
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
local-ip-address = "0.5.4"
rand = "0.8"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
semver = "1.0.23"
sha2 = "0.10.8"
sha3 = "0.10.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.28", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4.0", features = ["serde"] }

near-account-id = "1.0.0"
near-crypto = "0.23.0"
near-fetch = "0.5.0"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs", branch = "node/1.40-and-async-run" }
near-lake-primitives = { git = "https://github.com/near/near-lake-framework-rs", branch = "node/1.40-and-async-run" }
near-primitives = "0.23.0"
near-sdk = { version = "5.2.1", features = ["legacy", "unit-testing"] }

mpc-contract = { path = "../contract" }
mpc-keys = { path = "../keys" }
crypto-shared = { path = "../crypto-shared" }

itertools = "0.12.0"
http = "1.1.0"
prometheus = { version = "0.13.3" }
once_cell = "1.13.1"
