[package]
name = "mpc-test-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
borsh = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

near-sdk = { version = "5.2.1", features = ["legacy", "unit-testing"] }
near-gas = { version = "0.2.5", features = ["serde", "borsh", "schemars"] }

# Need to ignore root workspace
[workspace]
