[package]
name = "attestation-types"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = "https://github.com/near/mpc"

[features]
borsh-schema = ["borsh/unstable__schema", "tee-verifier-interface/borsh-schema"]
dstack-conversions = ["dep:dstack-sdk-types"]
test-utils = []

[dependencies]
borsh = { workspace = true }
derive_more = { workspace = true }
dstack-sdk-types = { workspace = true, optional = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
tee-verifier-interface = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
dstack-sdk-types = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
