[package]
name = "attestation"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
borsh-schema = ["borsh/unstable__schema", "tee-verifier-interface/borsh-schema"]
dstack-conversions = ["dep:dstack-sdk-types"]
test-utils = []
# Off-chain only: pulls in `dcap-qvl` for `DstackAttestation::verify_locally`
# (full local DCAP + post-DCAP verification). On-chain callers (the contract)
# do not enable this; they get the `VerifiedReport` from the verifier contract
# and call `verify_with_report` directly.
local-verify = ["dep:dcap-qvl"]

[dependencies]
borsh = { workspace = true }
dcap-qvl = { workspace = true, optional = true }
derive_more = { workspace = true }
dstack-sdk-types = { workspace = true, optional = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
# `serde` feature: `DstackAttestation` re-exports and embeds the interface
# `Collateral`/`QuoteBytes` and derives serde on them (needed for the node's
# `/public_data` payload). This is the only place that turns the interface
# crate's off-by-default `serde` feature on.
tee-verifier-interface = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
# Self-dependency enabling the off-chain features so unit tests can exercise
# the `dcap_conversions` Borsh-layout pin and `verify_locally`.
attestation = { path = ".", features = ["local-verify", "test-utils", "dstack-conversions"] }
dstack-sdk-types = { workspace = true }
rstest = { workspace = true }
test-utils = { workspace = true }

[[test]]
name = "app_compose"
required-features = ["dstack-conversions"]

[[test]]
name = "collateral"
required-features = ["test-utils"]

[lints]
workspace = true
