[package]
name = "backup-cli"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
mpc-node = { workspace = true }
near-account-id = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-mpc-contract-interface = { workspace = true }
near-primitives = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
mpc-node = { workspace = true, features = ["test-utils"] }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
