[package]
name = "chain-gateway-test-contract"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = "https://github.com/near/mpc"

[package.metadata.cargo-shear]
ignored = ["borsh"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.21.1-rust-1.97.0"
image_digest = "sha256:7ba2b3251f29e5d29fca1611cb5298fc44bafddcff8cab2e143b1e491da16633"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
mpc-call-args = { workspace = true }
near-sdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
