[package]
name = "chain-gateway-test-contract"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = "https://github.com/near/mpc"

[package.metadata.cargo-shear]
ignored = ["borsh"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.22.0-rust-1.97.0"
image_digest = "sha256:b193c8640a27172f83136a0f0aab2a9bf9d09f6ba0e6afd187addfaa9b92bae0"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
mpc-call-args = { workspace = true }
near-sdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
