[package]
name = "chain-gateway-test-contract"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = "https://github.com/near/mpc"

[package.metadata.cargo-shear]
ignored = ["borsh"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.22.0-rust-1.97.1"
image_digest = "sha256:7467038bdddc86484b73b416eeadce926ff59013e128e53dec5a19e1cb4b2234"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
near-contract-transport = { workspace = true }
near-sdk = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
