[package]
name = "ckd-example-cli"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
blstrs = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
contract-interface = { workspace = true }
derive_more = { workspace = true, features = ["from_str", "constructor"] }
elliptic-curve = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
