[package]
name = "contract-history"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
external-services-tests = []

[dev-dependencies]
bs58.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[lints]
workspace = true
