[package]
name = "contract-interface"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
abi = ["schemars"]

[dependencies]
borsh = { workspace = true }
bs58 = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { workspace = true, optional = true }

[dev-dependencies]
near-sdk = { workspace = true }
serde_json = { workspace = true }
