[package]
name = "contract-interface"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
abi = ["borsh/unstable__schema", "schemars"]

[dependencies]
borsh = { workspace = true }
bs58 = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { workspace = true, optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
insta = { workspace = true }
near-sdk = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
