[package]
name = "contract-interface"
version = "0.0.1"
license = { workspace = true }
edition = { workspace = true }

[features]
abi = [
    "borsh/unstable__schema",
    "near-mpc-bounded-collections/abi",
    "mpc-crypto-types/abi",
    "schemars",
]
blstrs = ["mpc-crypto-types/blstrs"]
ed25519-dalek = ["mpc-crypto-types/ed25519-dalek"]
k256 = ["mpc-crypto-types/k256"]
near = ["mpc-crypto-types/near"]

[dependencies]
borsh = { workspace = true }
derive_more = { workspace = true }
mpc-crypto-types = { workspace = true }
near-mpc-bounded-collections = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { workspace = true, optional = true }

[dev-dependencies]
borsh = { workspace = true }
hex = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
