[package]
name = "mpc-contract"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = "https://github.com/near/mpc"

# Reproducible builds are produced by the Nix derivation at `nix/mpc-contract.nix`
# (exposed as `packages.<system>.mpc-contract` in `flake.nix`). See
# `docs/reproducible-builds.md` for instructions and hash verification.

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-utils = ["rand", "threshold-signatures", "near-mpc-contract-interface/blstrs"]
# WASM-compatible benchmark endpoints for sandbox gas testing
bench-contract-methods = []
# Sandbox-only view methods that expose internal contract state for tests that need to
# assert invariants that aren't visible through the production API surface (e.g. the
# length of a fan-out queue). Distinct from `bench-contract-methods` because these are
# behavioral hooks, not gas-measurement hooks.
sandbox-test-methods = []
# Exposes constructors for DTO-to-internal type conversion in the node.
# TODO(#381): Remove once the node no longer depends on the contract crate.
compat = []
dev-utils = ["rand", "threshold-signatures", "near-mpc-contract-interface/blstrs"]
abi = [
    "borsh/unstable__schema",
    "near-mpc-contract-interface/abi",
    "mpc-attestation/abi",
    "mpc-primitives/abi",
    "schemars",
]
# This is used when running `cargo clippy --all-features`, because otherwise `abi` feat will break compilation.
# But we can't put it under `abi` feat either, because it should appear only when building schema. In other words,
# if it appears under wasm32 target, it will break compilation too.
__abi-generate = ["abi", "near-sdk/__abi-generate"]

[dependencies]
assert_matches = { workspace = true }
blstrs = { workspace = true }
borsh = { workspace = true }
curve25519-dalek = { workspace = true }
derive_more = { workspace = true, features = ["from", "deref"] }
elliptic-curve = { workspace = true }
hex = { workspace = true, features = [] }
k256 = { workspace = true, features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
mpc-attestation = { workspace = true }
mpc-primitives = { workspace = true }
near-account-id = { workspace = true, features = ["serde"] }
near-mpc-bounded-collections = { workspace = true }
near-mpc-contract-interface = { workspace = true, features = [
    "ed25519-dalek",
    "k256",
    "near",
] }
near-mpc-signature-verifier = { workspace = true }
near-sdk = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
threshold-signatures = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
near-account-id = { workspace = true, features = [
    "serde",
    "schemars-v0_8",
    "abi",
] }
schemars = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["custom"] }

[dev-dependencies]
anyhow = { workspace = true }
cargo-near-build = { workspace = true }
contract-history = { workspace = true }
digest = { workspace = true }
ecdsa = { workspace = true }
futures = { workspace = true }
insta = { workspace = true }
mpc-contract = { workspace = true, features = [
    "compat",
    "sandbox-test-methods",
    "test-utils",
] }
near-abi = { workspace = true }
near-mpc-sdk = { workspace = true }
near-workspaces = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rstest = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
test-utils = { workspace = true }
threshold-signatures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
