[package]
name = "contract_history"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "export_contracts"
path = "src/bin/export_contracts.rs"

[features]
external-services-tests = []

[dependencies]
base64.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
bs58.workspace = true
sha2.workspace = true
